# softapServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/app/: CMakeLists.txt
components/app/include/: app_cjson.h  app_config.h  lcd_st7735.h
components/app/src/: app_cjson.c  app_gpio.c  lcd_st7735.c
components/socket_wrapper/: CMakeLists.txt  socket_wrapper.c
components/wifi_wrapper/: CMakeLists.txt  wifi_wrapper.c  wifi_wrapper.h
main/: CMakeLists.txt  main.c  main.cpp
main/bsp/include/: key.h  lcd_font.h
main/bsp/src/: key.cpp  lcd_st7735.cpp
main/comm/: tcp_data_handle.cpp  tcp_server.cpp
main/comm/include/: tcp_data_handle.h  tcp_server.h
main/config/: app_config.h
main/gui/: gui.cpp  gui.h
main/misc/: cmds.cpp
main/misc/include/: cmds.h
